--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"postcss-easy-import": "^3.0.0",
 		"postcss-mixins": "^6.2.3",
 		"postcss-preset-env": "^6.7.0",
+		"simplebar": "^5.3.0",
 		"stylelint": "^13.6.1",
 		"swiper": "^6.1.2",
 		"wavesurfer.js": "^4.0.1"
